# Laplacian

./: .gitignore  README.md  build.gradle  gradle-app.setting  gradlew.bat  pom.xml  settings.gradle
Laplacian-Essential-FFmpeg-Decoder/: CMakeLists.txt  Makefile  PacketQueue.cpp  PacketQueue.h  charlie_laplacian_decoder_essential_FFmpegDecoder.h  charlie_laplacian_decoder_essential_FFmpegDecoder_SDLVolumeController.h  customio.h  decode.h  error_msgs.h  laplacian_essential-ffmpeg_decoder_impl.cpp  shortcuts.h
Laplacian-Essential-FFmpeg-Decoder/ffmpeg-win64-dev/: README.txt
Laplacian-Essential-FFmpeg-Decoder/ffmpeg-win64-dev/doc/: ffmpeg-all.html  ffmpeg-formats.html  ffplay-all.html  ffprobe-all.html
Laplacian-Essential-FFmpeg-Decoder/ffmpeg-win64-dev/include/libavutil/: ffversion.h
Laplacian-Essential-FFmpeg-Decoder/ffmpeg-win64-dev/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
Laplacian.Essential/: build.gradle  settings.gradle
Laplacian.Essential.Desktop/: build.gradle
Laplacian.Essential.Desktop/src/main/java/org/ffmpeg/avcodec57/: AVBSFContext.java  AVBSFInternal.java  AVBSFList.java  AVCPBProperties.java  AVCodecParameters.java  AVCodecParserContext.java  AVPacketSideData.java  AVProfile.java  AVSubtitle.java  AVSubtitleRect.java  RcOverride.java  ReSampleContext.java
Laplacian.Essential.Desktop/src/main/java/org/ffmpeg/avdevice57/: AVDeviceInfoList.java  AVDeviceRect.java  Avdevice57Library.java
Laplacian.Essential.Desktop/src/main/java/org/ffmpeg/avfilter6/: AVBufferSrcParameters.java  AVFilter.java  AVFilterCommand.java  AVFilterGraph.java  AVFilterInOut.java
Laplacian.Essential.Desktop/src/main/java/org/ffmpeg/avformat57/: AVChapter.java  AVCodecTag.java  AVFormatContext.java  AVFormatInternal.java  AVIOContext.java  AVInputFormat.java  AVOutputFormat.java  AVPacketList.java  AVProbeData.java  AVStream.java  Avformat57Library.java  FFFrac.java
Laplacian.Essential.Desktop/src/main/java/org/ffmpeg/avutil55/: AVBuffer.java  AVComponentDescriptor.java  AVDictionaryEntry.java  AVFrame.java  AVFrameSideData.java  AVOption.java  AVSphericalMapping.java
Laplacian.Essential.Desktop/src/main/java/org/ffmpeg/postproc54/: Postproc54Library.java
Laplacian.Essential.Desktop/src/main/java/org/ffmpeg/swresample2/: Swresample2Library.java
Laplacian.Essential.Desktop/src/main/java/org/ffmpeg/swscale4/: SwsFilter.java
Laplacian.Essential.Desktop/src/main/resources/: Laplacian.xml
Laplacian.Essential/FFmpegDecoder/: CMakeLists.txt  charlie_laplacian_decoder_essential_FFmpegDecoder.h  charlie_laplacian_decoder_essential_FFmpegDecoder_Companion.h  error_msgs.h  laplacian_essential-ffmpeg_decoder_impl.cpp
Laplacian.Essential/src/main/java/org/ffmpeg/avcodec/: AVBSFContext.java  AVBSFInternal.java  AVBSFList.java  AVBitStreamFilter.java  AVBitStreamFilterContext.java  AVCPBProperties.java  AVCodec.java  AVCodecContext.java  AVCodecDefault.java  AVCodecDescriptor.java  AVCodecInternal.java  AVCodecLibrary.java  AVCodecParameters.java  AVCodecParser.java  AVCodecParserContext.java  AVHWAccel.java  AVPacket.java  AVPacketSideData.java  AVPanScan.java  AVPicture.java  AVProfile.java  AVSubtitle.java  AVSubtitleRect.java  RcOverride.java  ReSampleContext.java
Laplacian.Essential/src/main/java/org/ffmpeg/avcodec57/: AVBitStreamFilter.java  AVBitStreamFilterContext.java  AVCodec.java  AVCodecContext.java  AVCodecDefault.java  AVCodecDescriptor.java  AVCodecInternal.java  AVCodecParser.java  AVHWAccel.java  AVPacket.java  AVPanScan.java  AVPicture.java  Avcodec57Library.java
Laplacian.Essential/src/main/java/org/ffmpeg/avdevice/: AVDeviceCapabilitiesQuery.java  AVDeviceInfo.java  AVDeviceInfoList.java  AVDeviceLibrary.java  AVDeviceRect.java
Laplacian.Essential/src/main/java/org/ffmpeg/avdevice57/: AVDeviceCapabilitiesQuery.java  AVDeviceInfo.java
Laplacian.Essential/src/main/java/org/ffmpeg/avfilter/: AVABufferSinkParams.java  AVBufferSinkParams.java  AVBufferSrcParameters.java  AVFilter.java  AVFilterCommand.java  AVFilterContext.java  AVFilterFormats.java  AVFilterGraph.java  AVFilterGraphInternal.java  AVFilterInOut.java  (+4 more)
Laplacian.Essential/src/main/resources/: log4j2.xml
Laplacian.Framework/: build.gradle
Laplacian.Framework/src/main/kotlin/charlie/laplacian/: LaplacianException.kt
Laplacian.Launcher/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/charlie/laplacian/: I18n.kt
src/main/kotlin/charlie/laplacian/config/: Configuration.kt
src/main/kotlin/charlie/laplacian/decoder/: Decoder.kt  DecoderFactory.kt  DecoderMetadata.kt  DecoderRegistry.kt  SeekableTrackStream.kt  SizeKnownTrackStream.kt  TrackStream.kt  UnsupportedCodecException.kt  VolumeController.kt
src/main/kotlin/charlie/laplacian/mixer/: AudioChannel.kt  Mixer.kt  VolumeController.kt
src/main/kotlin/charlie/laplacian/output/: OutputLine.kt  OutputMethodRegistry.kt  OutputSettings.kt  VolumeController.kt
src/main/kotlin/charlie/laplacian/playctrl/: PlayController.kt
src/main/kotlin/charlie/laplacian/plugin/: Plugin.kt  PluginInitializer.kt  PluginRegistry.kt
src/main/kotlin/charlie/laplacian/source/: ExpiredLocalTrackStreamInfo.kt  LocalTrackSource.kt  RemoteTrackSource.kt  SourceRegister.kt  TrackSource.kt  TrackSourceInfo.kt
src/main/kotlin/charlie/laplacian/stream/: SeekableTrackStream.kt  SizeKnownTrackStream.kt  TrackStream.kt
src/main/kotlin/charlie/laplacian/track/: Track.kt
src/main/resources/: Laplacian.properties  log4j2.xml
(+144 files in other folders)
